src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Astra_Tech_Implant_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this check box if the Opportunity is primarily aimed for restorative Astra Tech Implants system products.</description>
        <inlineHelpText>Check this check box if the Opportunity is primarily aimed for restorative Astra Tech Implants system products.</inlineHelpText>
        <label>Astra Tech Implant System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Atlantis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this check box if the Opportunity is primarily aimed for restorative Atlantis products.</description>
        <inlineHelpText>Check this check box if the Opportunity is primarily aimed for restorative Atlantis products.</inlineHelpText>
        <label>Atlantis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attention_paid_at_Customer_Meeting__c</fullName>
        <label>Attention paid at Customer Meeting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Engaged</fullName>
                </value>
                <value>
                    <fullName>Inattentive</fullName>
                </value>
                <value>
                    <fullName>Intermittent Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Monthly_CFEs_While_AP_Open__c</fullName>
        <description>This field calculates the number of IMPL CFEs/months during the time when the AP was open. The time is calculated from the date when the opportunity was created to a cosed date field or TODAY() if the Opportunity is still open.</description>
        <formula>(365.25/12)*(CFEs_While_AP_Open__c /
            IF( IsClosed = TRUE, IF( ISBLANK(ActualCloseDate__c),  CloseDate - DATEVALUE(CreatedDate),ActualCloseDate__c- DATEVALUE(CreatedDate)), TODAY()-DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly CFEs While AP Open</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Initiative__c</fullName>
        <label>Business Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Plan</fullName>
                </value>
                <value>
                    <fullName>Top 5 Priorities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFE_LY__c</fullName>
        <formula>Account.CFEs_Implants_CY_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFE LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFE_Target_CY__c</fullName>
        <description>planned Number of CFEs</description>
        <inlineHelpText>Geplabre anzahl an Besuchen dieses Jahr</inlineHelpText>
        <label>#CFE Target CY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFEsCompleted__c</fullName>
        <label># CFEs completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFEs_CY__c</fullName>
        <formula>Account.CFEs_Implants_CY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># CFEs CY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFEs_Last_6_Months_D__c</fullName>
        <description>Total number of completed CFEs Last 6 Months towards Account associated with Opportunity.</description>
        <formula>Account.CFEs_Implants_Last_6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of completed CFEs Last 6 Months towards Account associated with Opportunity.</inlineHelpText>
        <label># CFEs Last 6 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFEs_Last_7_12_Months_D__c</fullName>
        <description>Total number of completed CFEs Last 7-12 months towards Account associated with Opportunity.</description>
        <formula>Account.CFEs_Implants_Last_7_12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of completed CFEs Last 7-12 months towards Account associated with Opportunity.</inlineHelpText>
        <label># CFEs Last 7-12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFEs_Next_6_Months_D__c</fullName>
        <description>Total number of planned CFEs next 6 months towards Account associated with Opportunity.</description>
        <formula>Account.CFEs_Implants_Next_6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of planned CFEs next 6 months towards Account associated with Opportunity.</inlineHelpText>
        <label># CFEs Next 6 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFEs_While_AP_Open__c</fullName>
        <description>Number of IMPL CFEs performed towards the Account of the Opportunity while the account plan was open. Updated by cloud job &quot;AggregateApCFEs&quot;.</description>
        <inlineHelpText>Number of CFEs performed towards the Account of the Opportunity while the account plan was open. Updated by cloud job &quot;AggregateApCFEs&quot;.</inlineHelpText>
        <label># CFEs While AP Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFEs_on_Track__c</fullName>
        <description>This field is enabled if # CFEs last 6M reaches or exceeds 5</description>
        <formula>IF(CFEs_Last_6_Months_D__c &gt;= 5, TRUE, FALSE)</formula>
        <inlineHelpText>This field is enabled if # CFEs last 6M reaches or exceeds 5</inlineHelpText>
        <label># CFEs on Track?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Implant_Volume_F__c</fullName>
        <description>Calculation of # implants competitor</description>
        <formula>Account.Implants_Potential_Year__c-Sold_Implants_L12M__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculated from Implant potential of the assigned account minus Implants solds last 12 Month</inlineHelpText>
        <label>Competitor Implant Volume_F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Information__c</fullName>
        <description>Relevant information about Competitor</description>
        <label>Competitor Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Multiple selection to competitors</description>
        <inlineHelpText>Auswahl der Wettbewerber in der Praxis</inlineHelpText>
        <label>Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anderer</fullName>
                </value>
                <value>
                    <fullName>Bego</fullName>
                </value>
                <value>
                    <fullName>Bicon Dental</fullName>
                </value>
                <value>
                    <fullName>BIOMET 3i</fullName>
                </value>
                <value>
                    <fullName>Bredent</fullName>
                </value>
                <value>
                    <fullName>Camlog</fullName>
                </value>
                <value>
                    <fullName>Champions</fullName>
                </value>
                <value>
                    <fullName>ICX Templant</fullName>
                </value>
                <value>
                    <fullName>Lifecore/Keystone</fullName>
                </value>
                <value>
                    <fullName>Medentika</fullName>
                </value>
                <value>
                    <fullName>MIS Implants</fullName>
                </value>
                <value>
                    <fullName>Neoss</fullName>
                </value>
                <value>
                    <fullName>Nobel Biocare</fullName>
                </value>
                <value>
                    <fullName>Oraltronics</fullName>
                </value>
                <value>
                    <fullName>Semados</fullName>
                </value>
                <value>
                    <fullName>SIC Implantate</fullName>
                </value>
                <value>
                    <fullName>Straumann</fullName>
                </value>
                <value>
                    <fullName>Thommen Medical</fullName>
                </value>
                <value>
                    <fullName>Zimmer Dental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conservative_Dentistry__c</fullName>
        <formula>if (includes( Account.Clinic_Treatment_Focus__c ,&quot;Conservative dentistry&quot;),True,False)</formula>
        <label>Conservative Dentistry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractOrderConfirmed__c</fullName>
        <label>Contract/order confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractOrderPresented__c</fullName>
        <label>Contract/order presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_by_Manager__c</fullName>
        <formula>CreatedBy.Manager.FirstName &amp; &quot; &quot;  &amp; CreatedBy.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by - Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Me__c</fullName>
        <description>Dynamic Checkbox that shows if the logged in user created the opportunity.
            Used in reports for X-SBU opportunities to show the originator of the lead their opportunities</description>
        <formula>IF(CreatedById ==  $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if created by yourself, and unchecked if not</inlineHelpText>
        <label>Created by Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_My_Direct_Reports__c</fullName>
        <description>created to meet this request
            https://dentsplysirona.my.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=0F90J0000000NQO&amp;fId=0D50J00003jUSvY</description>
        <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by My Direct Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Country__c</fullName>
        <formula>TEXT(CreatedBy.User_Country__c)</formula>
        <label>Creator Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrossSellOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross-sell opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_customer_position__c</fullName>
        <label>Current customer position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concerns</fullName>
                </value>
                <value>
                    <fullName>Enjoyable</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Safe</fullName>
                </value>
                <value>
                    <fullName>Uneasiness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_products_used__c</fullName>
        <description>Used for trials &amp; tenders to track current products used</description>
        <label>Current products used</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNotes__c</fullName>
        <inlineHelpText>Information added by the customer/contact when filling a webform as part of a digital campaign</inlineHelpText>
        <label>Customer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Opinion_of_Milling_Results__c</fullName>
        <label>Customer Opinion of Milling Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer was disappointed</fullName>
                </value>
                <value>
                    <fullName>Customer was impressed</fullName>
                </value>
                <value>
                    <fullName>Customer was satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_profile_Quality_awareness__c</fullName>
        <label>Customer profile Quality awareness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_profile_Reputation__c</fullName>
        <label>Customer profile Reputation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_profile_communication__c</fullName>
        <label>Customer profile communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_profile_innovative__c</fullName>
        <label>Customer profile innovative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_profile_sales_potential__c</fullName>
        <label>Customer profile sales potential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>CventEvents__Attendee__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventTitle__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; CventEvents__Event__r.CventEvents__pkg_Title__c, &quot;&quot;) &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Event__c, CventEvents__Event__r.CventEvents__pkg_Title__c)</formula>
        <label>Cvent Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cvent Event Number</label>
        <referenceTo>CventEvents__Event__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Next_Steps_Updated__c</fullName>
        <formula>TODAY() - Next_Steps_Last_Modified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Next Steps Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Rep_Type__c</fullName>
        <label>Dealer Rep Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cerec Consumables Specialist</fullName>
                </value>
                <value>
                    <fullName>Digital Technology Specialist</fullName>
                </value>
                <value>
                    <fullName>Equipment Specialist</fullName>
                </value>
                <value>
                    <fullName>Field Service Consultant</fullName>
                </value>
                <value>
                    <fullName>Territory Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Sales_Rep_secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Sales Rep (secondary)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Dealer Sales Rep (secondary))</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 5) OR (2 AND 3 AND 4)</booleanFilter>
            <errorMessage>You must select a distributor.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>ERP Distributor, Non-ERP Distributor, DNA Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CIM Account</value>
            </filterItems>
            <filterItems>
                <field>Account.OneAccount_Type__c</field>
                <operation>equals</operation>
                <value>Distributor, DNA Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.DistributorCategories__c</field>
                <operation>notContain</operation>
                <valueField>$Source.NA_Category__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account.DistributorCategories__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <infoMessage>Search for the Delaer connected to this opportunity</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Distributor)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_s_Sales_Rep_Email__c</fullName>
        <description>Field to prepopulate the additional too in &quot;E-mail the Opportunity&quot; button for BeNelux market</description>
        <formula>If(TEXT($User.Market__c)=&apos;BeNelux&apos;,Dealer_s_Sales_Rep__r.Email,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer&apos;s Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_s_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer&apos;s Sales Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Dealer__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Dealer&apos;s Primary Contact)</relationshipLabel>
        <relationshipName>Dealer_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealers_Sales_Rep_Type_secondary__c</fullName>
        <label>Dealers Sales Rep Type (secondary)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cerec Consumables Specialist</fullName>
                </value>
                <value>
                    <fullName>Digital Technology Specialist</fullName>
                </value>
                <value>
                    <fullName>Equipment Specialist</fullName>
                </value>
                <value>
                    <fullName>Field Service Consultant</fullName>
                </value>
                <value>
                    <fullName>Territory Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DemoDate__c</fullName>
        <label>Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DemoNotes__c</fullName>
        <label>Demo Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DentsplySironaSpecialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DentsplySirona Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor_Rep__c</fullName>
        <inlineHelpText>The name of the distributor partner rep for this opportunity</inlineHelpText>
        <label>Distributor Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Specialist__c</fullName>
        <label>Distributor Specialist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Ortho__c</fullName>
        <description>ERP# (Ortho) as entered on the Account object</description>
        <formula>Account.ERP_Ortho__c</formula>
        <inlineHelpText>ERP# (Ortho) - fetched from the Account</inlineHelpText>
        <label>ERP# (ORTH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endodontics__c</fullName>
        <formula>if (includes( Account.Clinic_Treatment_Focus__c ,&quot;Endodontics&quot;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endodontics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_ATL_GrowthCY__c</fullName>
        <description>Shows the estimated growth in money for this Account. It compares Atlantis Sales LY with the Est ATL Sales CY on the Opportunity. Only applicable when the Closing year equals or greater than the current year. otherwise it will be Zero</description>
        <formula>IF (OR (Year (CloseDate) = Year(Today())+1,Year (CloseDate) = Year(Today()) ),Amount -  Account.TS_CY_1_D_DD_AllPCs_Atlantis__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the estimated growth in money for this Account. It compares Atlantis Sales LY with the Est ATL Sales CY on the Opportunity. Only applicable when the Closing year equals or greater than the current year. otherwise it will be Zero</inlineHelpText>
        <label>Est ATL Growth CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Growth_CY_5000__c</fullName>
        <formula>Account.Est_ATL_Growth_CY_5000__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est ATL Growth CY&gt;5000€?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Growth_CY__c</fullName>
        <description>This field shows the expected Atlantis growth in % on Account this CY compared to total Atlantis sales LY.</description>
        <formula>IF (Year (CloseDate) = Year(Today()) ,Account.XEst_ATL_Growth__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows the expected Atlantis growth in % on Account this CY compared to total Atlantis sales LY.</inlineHelpText>
        <label>% Est ATL Growth CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Est_ATL_Sales_CY__c</fullName>
        <description>This field shows the Est Atlantis Sales CY for the Account associated with this Opportunity. The field is taken from the Account record and can therefore only by changed on the Account record.</description>
        <formula>IF ( $RecordType.Name =&apos;GROW Lab Atlantis&apos;, Amount ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows the Est Atlantis Sales CY for the Account associated with this Opportunity. The field is taken from the Account record and can therefore only by changed on the Account record.</inlineHelpText>
        <label>Est ATL Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Growth_5000__c</fullName>
        <formula>Account.Est_Growth_CY_5000_Euro__c</formula>
        <label>Est Growth CY &gt;5000 €</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Growth_CY__c</fullName>
        <description>Shows the estimated growth in money for this Account. It compares Sales LY with the Est Sales CY on the Opportunity. Only applicable when the Closing year equals or greater than the current year. otherwise it will be Zero</description>
        <formula>IF (OR (Year (CloseDate) = Year(Today())+1,Year (CloseDate) = Year(Today()) ),Amount -  Account.TS_CY_1_D_AllPLs_AllPCs_AllBrands__c ,0)</formula>
        <inlineHelpText>Shows the estimated growth in money for this Account. It compares Sales LY with the Est Sales CY on the Opportunity. Only applicable when the Closing year equals or greater than the current year. otherwise it will be Zero</inlineHelpText>
        <label>Est Growth CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implant_Growth_CY_20__c</fullName>
        <formula>Account.Est_Implant_Growth_CY_20__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Implant Growth CY &gt;20?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Implant_Growth_CY__c</fullName>
        <formula>Account.Est_Implant_Growth_CY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Implant Growth CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Implant_Volume_CY_D_JP__c</fullName>
        <formula>Account.Est_Implant_Volume_CY_D__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Implant Volume CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Other_Sales_CY_D__c</fullName>
        <description>Shows the Est Non-Atlantis Sales CY  for Lab accounts. The field can be changed only from the Account record. Changes are accepted only during the same closing year. After that this field will be freezed.</description>
        <formula>Est_Sales_Other_D__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Est Non-Atlantis Sales CY  for Lab accounts. The field can be changed only from the Account record. Changes are accepted only during the same closing year. After that this field will be freezed.</inlineHelpText>
        <label>Est Other Sales CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>